--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,10 @@ services:
     name: chutesai2api
     region: frankfurt
     plan: free
-    image: ghcr.io/deanxv/chutesai2api:latest  # 確保縮進正確
+    # 顯式聲明 docker 配置 ▼
+    docker:
+      image: ghcr.io/deanxv/chutesai2api:latest
     envVars:
       - key: PORT
         value: "7011"
-      - key: API_SECRET
-        value: "sk-12345"  # 替換為真實密鑰
-      - key: TZ
-        value: "Asia/Shanghai"
     autoDeploy: true
