--- a/render.yaml
+++ b/render.yaml
@@ -3,13 +3,13 @@ services:
     name: chutesai2api
     region: frankfurt
     plan: free
-    # 注意 image 必須與 type/name 同級 ▼
-    image: ghcr.io/deanxv/chutesai2api:latest  # 確保縮進正確
+    image:
+      url: ghcr.io/deanxv/chutesai2api:latest
     envVars:
       - key: PORT
         value: "7011"
       - key: API_SECRET
-        value: "your_actual_secret"  # 替換為真實密鑰
+        value: "your_actual_secret"
       - key: TZ
         value: "Asia/Shanghai"
     autoDeploy: true
